include/xprs.h



/***************************************************************************\
 * Object and reference types                                              *
\***************************************************************************/
typedef struct XPRSobject_s *XPRSobject;

typedef struct xo_prob_struct* XPRSprob;

typedef struct XPRSmipsolpool_s* XPRSmipsolpool;

typedef struct XPRSmipsolenum_s* XPRSmipsolenum;

typedef struct xo_user_branch_entity_s * XPRSbranchobject;

int XPRS_CC XPRSsetcbdestroymt(XPRSprob prob, void (XPRS_CC *f_destroymt)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSgetcbdestroymt(XPRSprob prob, void (XPRS_CC **f_destroymt)(XPRSprob prob, void* vContext), void** p);

int XPRS_CC XPRSaddcbdestroymt(XPRSprob prob, void (XPRS_CC *f_destroymt)(XPRSprob prob, void* vContext), void* p, int priority);

int XPRS_CC XPRSremovecbdestroymt(XPRSprob prob, void (XPRS_CC *f_destroymt)(XPRSprob prob, void* vContext), void* p);

int XPRS_CC XPRSsetcbnewnode(XPRSprob prob, void (XPRS_CC *f_newnode)(XPRSprob prob, void* vContext, int parentnode, int newnode, int branch), void* p);

int XPRS_CC XPRSgetcbnewnode(XPRSprob prob, void (XPRS_CC **f_newnode)(XPRSprob prob, void* vContext, int parentnode, int newnode, int branch), void** p);

int XPRS_CC XPRSaddcbnewnode(XPRSprob prob, void (XPRS_CC *f_newnode)(XPRSprob prob, void* vContext, int parentnode, int newnode, int branch), void* p, int priority);

int XPRS_CC XPRSremovecbnewnode(XPRSprob prob, void (XPRS_CC *f_newnode)(XPRSprob prob, void* vContext, int parentnode, int newnode, int branch), void* p);

int XPRS_CC XPRSsetcbbariteration(XPRSprob prob, void (XPRS_CC *f_bariteration)(XPRSprob prob, void* vContext, int* barrier_action), void* p);

int XPRS_CC XPRSgetcbbariteration(XPRSprob prob, void (XPRS_CC **f_bariteration)(XPRSprob prob, void* vContext, int* barrier_action), void** p);

int XPRS_CC XPRSaddcbbariteration(XPRSprob prob, void (XPRS_CC *f_bariteration)(XPRSprob prob, void* vContext, int* barrier_action), void* p, int priority);

int XPRS_CC XPRSremovecbbariteration(XPRSprob prob, void (XPRS_CC *f_bariteration)(XPRSprob prob, void* vContext, int* barrier_action), void* p);

int XPRS_CC XPRSsetcbchgbranchobject(XPRSprob prob, void (XPRS_CC *f_chgbranchobject)(XPRSprob prob, void* vContext, XPRSbranchobject obranch, XPRSbranchobject* p_newobject), void* p);

int XPRS_CC XPRSgetcbchgbranchobject(XPRSprob prob, void (XPRS_CC **f_chgbranchobject)(XPRSprob prob, void* vContext, XPRSbranchobject obranch, XPRSbranchobject* p_newobject), void** p);

int XPRS_CC XPRSaddcbchgbranchobject(XPRSprob prob, void (XPRS_CC *f_chgbranchobject)(XPRSprob prob, void* vContext, XPRSbranchobject obranch, XPRSbranchobject* p_newobject), void* p, int priority);

int XPRS_CC XPRSremovecbchgbranchobject(XPRSprob prob, void (XPRS_CC *f_chgbranchobject)(XPRSprob prob, void* vContext, XPRSbranchobject obranch, XPRSbranchobject* p_newobject), void* p);

int XPRS_CC XPRSsetcbgapnotify(XPRSprob prob, void (XPRS_CC *f_gapnotify)(XPRSprob prob, void* vContext, double* newRelGapNotifyTarget, double* newAbsGapNotifyTarget, double* newAbsGapNotifyObjTarget, double* newAbsGapNotifyBoundTarget), void* p);

int XPRS_CC XPRSgetcbgapnotify(XPRSprob prob, void (XPRS_CC **f_gapnotify)(XPRSprob prob, void* vContext, double* newRelGapNotifyTarget, double* newAbsGapNotifyTarget, double* newAbsGapNotifyObjTarget, double* newAbsGapNotifyBoundTarget), void** p);

int XPRS_CC XPRSaddcbgapnotify(XPRSprob prob, void (XPRS_CC *f_gapnotify)(XPRSprob prob, void* vContext, double* newRelGapNotifyTarget, double* newAbsGapNotifyTarget, double* newAbsGapNotifyObjTarget, double* newAbsGapNotifyBoundTarget), void* p, int priority);

int XPRS_CC XPRSremovecbgapnotify(XPRSprob prob, void (XPRS_CC *f_gapnotify)(XPRSprob prob, void* vContext, double* newRelGapNotifyTarget, double* newAbsGapNotifyTarget, double* newAbsGapNotifyObjTarget, double* newAbsGapNotifyBoundTarget), void* p);

int XPRS_CC XPRSsetcbusersolnotify(XPRSprob prob, void (XPRS_CC *f_usersolnotify)(XPRSprob prob, void* vContext, const char* solname, int status), void* p);

int XPRS_CC XPRSgetcbusersolnotify(XPRSprob prob, void (XPRS_CC **f_usersolnotify)(XPRSprob prob, void* vContext, const char* solname, int status), void** p);

int XPRS_CC XPRSaddcbusersolnotify(XPRSprob prob, void (XPRS_CC *f_usersolnotify)(XPRSprob prob, void* vContext, const char* solname, int status), void* p, int priority);

int XPRS_CC XPRSremovecbusersolnotify(XPRSprob prob, void (XPRS_CC *f_usersolnotify)(XPRSprob prob, void* vContext, const char* solname, int status), void* p);


int XPRS_CC XPRSobjsa(XPRSprob prob, int ncols, const int mindex[], double lower[], double upper[]);

int XPRS_CC XPRSrhssa(XPRSprob prob, int nrows, const int mindex[], double lower[], double upper[]);


int XPRS_CC XPRS_ge_setcbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_ge_getcbmsghandler(int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_ge_addcbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_ge_removecbmsghandler(int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);


int XPRS_CC XPRS_ge_getlasterror(int* iMsgCode, char* _msg, int _iStringBufferBytes, int* _iBytesInInternalString);

int XPRS_CC XPRS_msp_setcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_msp_getcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_msp_addcbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_msp_removecbmsghandler(XPRSmipsolpool msp, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_mse_setcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);

int XPRS_CC XPRS_mse_getcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC **f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void** p);

int XPRS_CC XPRS_mse_addcbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p, int priority);

int XPRS_CC XPRS_mse_removecbmsghandler(XPRSmipsolenum mse, int (XPRS_CC *f_msghandler)(XPRSobject vXPRSObject, void* vUserContext, void* vSystemThreadId, const char* sMsg, int iMsgType, int iMsgCode), void* p);