include/xprs.bas

Declare PtrSafe Function XPRSgetcbdestroymt Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_destroymt As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbdestroymt Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_destroymt As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbdestroymt Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_destroymt As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbnewnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_newnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbnewnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_newnode As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbnewnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_newnode As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbnewnode Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_newnode As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbbariteration Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_bariteration As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbbariteration Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_bariteration As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbbariteration Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_bariteration As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbbariteration Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_bariteration As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbchgbranchobject Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgbranchobject As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbchgbranchobject Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_chgbranchobject As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbchgbranchobject Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgbranchobject As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbchgbranchobject Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_chgbranchobject As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbgapnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_gapnotify As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbgapnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_gapnotify As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbgapnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_gapnotify As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbgapnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_gapnotify As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSsetcbusersolnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_usersolnotify As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRSgetcbusersolnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef f_usersolnotify As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRSaddcbusersolnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_usersolnotify As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRSremovecbusersolnotify Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal f_usersolnotify As LongPtr, ByVal p As String) As Long

Declare PtrSafe Function XPRSobjsa Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncols As Long, mindex As Long, lower As Double, upper As Double) As Long
Declare PtrSafe Function XPRSrhssa Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, mindex As Long, lower As Double, upper As Double) As Long

Declare PtrSafe Function XPRSstartrecord Lib "XPRS.DLL" (ByVal path As String, ByVal cfgfilepath As String, ByVal flags As Long) As Long
Declare PtrSafe Function XPRSstoprecord Lib "XPRS.DLL" () As Long

Declare PtrSafe Function XPRS_ge_setcbmsghandler Lib "XPRS.DLL" (ByVal f_msghandler As LongPtr, ByVal p As String) As Long
Declare PtrSafe Function XPRS_ge_getcbmsghandler Lib "XPRS.DLL" (ByRef f_msghandler As LongPtr, ByRef p As String) As Long
Declare PtrSafe Function XPRS_ge_addcbmsghandler Lib "XPRS.DLL" (ByVal f_msghandler As LongPtr, ByVal p As String, ByVal priority As Long) As Long
Declare PtrSafe Function XPRS_ge_removecbmsghandler Lib "XPRS.DLL" (ByVal f_msghandler As LongPtr, ByVal p As String) As Long

Private Declare PtrSafe Function XPRS_ge_getlasterror_C Lib "XPRS.DLL" Alias "XPRS_ge_getlasterror" (ByRef iMsgCode As Long, ByVal msg As String, ByVal iStringBufferBytes As Long, ByRef iBytesInInternalString As Long) As Long
